common/yak/python/parser/python_parser.go
// Code generated from ./PythonParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package pythonparser // PythonParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/yaklang/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PythonParser struct {
	PythonParserBase
	// Grammar author supplied members of the instance struct

	disableFastPrediction bool
}

var PythonParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func pythonparserParserInit() {
	staticData := &PythonParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "'def'", "'return'", "'raise'", "'from'", "'import'",
		"'nonlocal'", "'as'", "'global'", "'assert'", "'if'", "'elif'", "'else'",
		"'while'", "'for'", "'in'", "'try'", "'None'", "'finally'", "'with'",
		"'except'", "'lambda'", "'or'", "'and'", "'not'", "'is'", "'class'",
		"'yield'", "'del'", "'pass'", "'continue'", "'break'", "'async'", "'await'",
		"'print'", "'exec'", "'True'", "'False'", "'.'", "'...'", "'`'", "'*'",
		"','", "':='", "':'", "';'", "'**'", "'='", "'|'", "'^'", "'&'", "'<<'",
		"'>>'", "'+'", "'-'", "'/'", "'%'", "'//'", "'~'", "'<'", "'>'", "'=='",
		"'>='", "'<='", "'<>'", "'!='", "'@'", "'->'", "'+='", "'-='", "'*='",
		"'@='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", "'**='",
		"'//='", "", "", "", "", "", "", "", "'('", "')'", "'{'", "'}'", "'['",
		"']'",
	}
	staticData.SymbolicNames = []string{
		"", "INDENT", "DEDENT", "LINE_BREAK", "DEF", "RETURN", "RAISE", "FROM",
		"IMPORT", "NONLOCAL", "AS", "GLOBAL", "ASSERT", "IF", "ELIF", "ELSE",
		"WHILE", "FOR", "IN", "TRY", "NONE", "FINALLY", "WITH", "EXCEPT", "LAMBDA",
		"OR", "AND", "NOT", "IS", "CLASS", "YIELD", "DEL", "PASS", "CONTINUE",
		"BREAK", "ASYNC", "AWAIT", "PRINT", "EXEC", "TRUE", "FALSE", "DOT",
		"ELLIPSIS", "REVERSE_QUOTE", "STAR", "COMMA", "COLON_ASSIGN", "COLON",
		"SEMI_COLON", "POWER", "ASSIGN", "OR_OP", "XOR", "AND_OP", "LEFT_SHIFT",
		"RIGHT_SHIFT", "ADD", "MINUS", "DIV", "MOD", "IDIV", "NOT_OP", "LESS_THAN",
		"GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ_1", "NOT_EQ_2",
		"AT", "ARROW", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", "AT_ASSIGN",
		"DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN",
		"LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", "POWER_ASSIGN", "IDIV_ASSIGN",
		"STRING", "DECIMAL_INTEGER", "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER",
		"IMAG_NUMBER", "FLOAT_NUMBER", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE",
		"CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "NAME", "LINE_JOIN",
		"NEWLINE", "WS", "COMMENT",
	}
	staticData.RuleNames = []string{
		"root", "single_input", "file_input", "eval_input", "stmt", "compound_stmt",
		"suite", "decorator", "elif_clause", "else_clause", "finally_clause",
		"with_item", "case_clause", "case_pattern", "except_clause", "classdef",
		"funcdef", "type_params", "typedargslist", "args", "kwargs", "def_parameters",
		"def_parameter", "named_parameter", "simple_stmt", "small_stmt", "testlist_star_expr",
		"star_expr", "assign_part", "exprlist", "import_as_names", "import_as_name",
		"dotted_as_names", "dotted_as_name", "test", "varargslist", "vardef_parameters",
		"vardef_parameter", "varargs", "varkwargs", "logical_test", "comparison",
		"expr", "atom", "dictorsetmaker", "testlist_comp", "testlist", "dotted_name",
		"name", "number", "integer", "yield_expr", "yield_arg", "trailer", "arguments",
		"arglist", "argument", "subscriptlist", "subscript", "sliceop", "comp_for",
		"comp_iter",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PythonParserInit initializes any static state used to implement PythonParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPythonParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PythonParserInit() {
	staticData := &PythonParserParserStaticData
	staticData.once.Do(pythonparserParserInit)
}

// NewPythonParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPythonParser(input antlr.TokenStream) *PythonParser {
	PythonParserInit()
	this := new(PythonParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PythonParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PythonParser.g4"

	return this
}

// PythonParser tokens.
const (
	PythonParserEOF                = antlr.TokenEOF
	PythonParserINDENT             = 1
	PythonParserDEDENT             = 2
	PythonParserLINE_BREAK         = 3
	PythonParserDEF                = 4
	PythonParserRETURN             = 5
	PythonParserRAISE              = 6
	PythonParserFROM               = 7
	PythonParserIMPORT             = 8
	PythonParserNONLOCAL           = 9
	PythonParserAS                 = 10
	PythonParserGLOBAL             = 11
	PythonParserASSERT             = 12
	PythonParserIF                 = 13
	PythonParserELIF               = 14
	PythonParserELSE               = 15
	PythonParserWHILE              = 16
	PythonParserFOR                = 17
	PythonParserIN                 = 18
	PythonParserTRY                = 19
	PythonParserNONE               = 20
	PythonParserFINALLY            = 21
	PythonParserWITH               = 22
	PythonParserEXCEPT             = 23
	PythonParserLAMBDA             = 24
	PythonParserOR                 = 25
	PythonParserAND                = 26
	PythonParserNOT                = 27
	PythonParserIS                 = 28
	PythonParserCLASS              = 29
	PythonParserYIELD              = 30
	PythonParserDEL                = 31
	PythonParserPASS               = 32
	PythonParserCONTINUE           = 33
	PythonParserBREAK              = 34
	PythonParserASYNC              = 35
	PythonParserAWAIT              = 36
	PythonParserPRINT              = 37
	PythonParserEXEC               = 38
	PythonParserTRUE               = 39
	PythonParserFALSE              = 40
	PythonParserDOT                = 41
	PythonParserELLIPSIS           = 42
	PythonParserREVERSE_QUOTE      = 43
	PythonParserSTAR               = 44
	PythonParserCOMMA              = 45
	PythonParserCOLON_ASSIGN       = 46
	PythonParserCOLON              = 47
	PythonParserSEMI_COLON         = 48
	PythonParserPOWER              = 49
	PythonParserASSIGN             = 50
	PythonParserOR_OP              = 51
	PythonParserXOR                = 52
	PythonParserAND_OP             = 53
	PythonParserLEFT_SHIFT         = 54
	PythonParserRIGHT_SHIFT        = 55
	PythonParserADD                = 56
	PythonParserMINUS              = 57
	PythonParserDIV                = 58
	PythonParserMOD                = 59
	PythonParserIDIV               = 60
	PythonParserNOT_OP             = 61
	PythonParserLESS_THAN          = 62
	PythonParserGREATER_THAN       = 63
	PythonParserEQUALS             = 64
	PythonParserGT_EQ              = 65
	PythonParserLT_EQ              = 66
	PythonParserNOT_EQ_1           = 67
	PythonParserNOT_EQ_2           = 68
	PythonParserAT                 = 69
	PythonParserARROW              = 70
	PythonParserADD_ASSIGN         = 71
	PythonParserSUB_ASSIGN         = 72
	PythonParserMULT_ASSIGN        = 73
	PythonParserAT_ASSIGN          = 74
	PythonParserDIV_ASSIGN         = 75
	PythonParserMOD_ASSIGN         = 76
	PythonParserAND_ASSIGN         = 77
	PythonParserOR_ASSIGN          = 78
	PythonParserXOR_ASSIGN         = 79
	PythonParserLEFT_SHIFT_ASSIGN  = 80
	PythonParserRIGHT_SHIFT_ASSIGN = 81
	PythonParserPOWER_ASSIGN       = 82
	PythonParserIDIV_ASSIGN        = 83
	PythonParserSTRING             = 84
	PythonParserDECIMAL_INTEGER    = 85
	PythonParserOCT_INTEGER        = 86
	PythonParserHEX_INTEGER        = 87
	PythonParserBIN_INTEGER        = 88
	PythonParserIMAG_NUMBER        = 89
	PythonParserFLOAT_NUMBER       = 90
	PythonParserOPEN_PAREN         = 91
	PythonParserCLOSE_PAREN        = 92
	PythonParserOPEN_BRACE         = 93
	PythonParserCLOSE_BRACE        = 94
	PythonParserOPEN_BRACKET       = 95
	PythonParserCLOSE_BRACKET      = 96
	PythonParserNAME               = 97
	PythonParserLINE_JOIN          = 98
	PythonParserNEWLINE            = 99
	PythonParserWS                 = 100
	PythonParserCOMMENT            = 101
)

// PythonParser rules.
const (
	PythonParserRULE_root               = 0
	PythonParserRULE_single_input       = 1
	PythonParserRULE_file_input         = 2
	PythonParserRULE_eval_input         = 3
	PythonParserRULE_stmt               = 4
	PythonParserRULE_compound_stmt      = 5
	PythonParserRULE_suite              = 6
	PythonParserRULE_decorator          = 7
	PythonParserRULE_elif_clause        = 8
	PythonParserRULE_else_clause        = 9
	PythonParserRULE_finally_clause     = 10
	PythonParserRULE_with_item          = 11
	PythonParserRULE_case_clause        = 12
	PythonParserRULE_case_pattern       = 13
	PythonParserRULE_except_clause      = 14
	PythonParserRULE_classdef           = 15
	PythonParserRULE_funcdef            = 16
	PythonParserRULE_type_params        = 17
	PythonParserRULE_typedargslist      = 18
	PythonParserRULE_args               = 19
	PythonParserRULE_kwargs             = 20
	PythonParserRULE_def_parameters     = 21
	PythonParserRULE_def_parameter      = 22
	PythonParserRULE_named_parameter    = 23
	PythonParserRULE_simple_stmt        = 24
	PythonParserRULE_small_stmt         = 25
	PythonParserRULE_testlist_star_expr = 26
	PythonParserRULE_star_expr          = 27
	PythonParserRULE_assign_part        = 28
	PythonParserRULE_exprlist           = 29
	PythonParserRULE_import_as_names    = 30
	PythonParserRULE_import_as_name     = 31
	PythonParserRULE_dotted_as_names    = 32
	PythonParserRULE_dotted_as_name     = 33
	PythonParserRULE_test               = 34
	PythonParserRULE_varargslist        = 35
	PythonParserRULE_vardef_parameters  = 36
	PythonParserRULE_vardef_parameter   = 37
	PythonParserRULE_varargs            = 38
	PythonParserRULE_varkwargs          = 39
	PythonParserRULE_logical_test       = 40
	PythonParserRULE_comparison         = 41
	PythonParserRULE_expr               = 42
	PythonParserRULE_atom               = 43
	PythonParserRULE_dictorsetmaker     = 44
	PythonParserRULE_testlist_comp      = 45
	PythonParserRULE_testlist           = 46
	PythonParserRULE_dotted_name        = 47
	PythonParserRULE_name               = 48
	PythonParserRULE_number             = 49
	PythonParserRULE_integer            = 50
	PythonParserRULE_yield_expr         = 51
	PythonParserRULE_yield_arg          = 52
	PythonParserRULE_trailer            = 53
	PythonParserRULE_arguments          = 54
	PythonParserRULE_arglist            = 55
	PythonParserRULE_argument           = 56
	PythonParserRULE_subscriptlist      = 57
	PythonParserRULE_subscript          = 58
	PythonParserRULE_sliceop            = 59
	PythonParserRULE_comp_for           = 60
	PythonParserRULE_comp_iter          = 61
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Single_input() ISingle_inputContext
	EOF() antlr.TerminalNode
	File_input() IFile_inputContext
	Eval_input() IEval_inputContext

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PythonParserRULE_root
	return p
}

func InitEmptyRootContext(p *RootContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PythonParserRULE_root
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PythonParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) Single_input() ISingle_inputContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISingle_inputContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISingle_inputContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(PythonParserEOF, 0)
}

func (s *RootContext) File_input() IFile_inputContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFile_inputContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFile_inputContext)
}

func (s *RootContext) Eval_input() IEval_inputContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEval_inputContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEval_inputContext)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PythonParserVisitor:
		return t.VisitRoot(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PythonParser) Root() (localctx IRootContext) {
	this := p
	_ = this

	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PythonParserRULE_root)
	p.SetState(134)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(124)
			p.Single_input()
		}
		{
			p.SetState(125)
			p.Match(PythonParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(127)
			p.File_input()
		}
		{
			p.SetState(128)
			p.Match(PythonParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(130)
			p.Eval_input()
		}
		{
			p.SetState(131)
			p.Match(PythonParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(133)
			p.Match(PythonParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISingle_inputContext is an interface to support dynamic dispatch.
type ISingle_inputContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LINE_BREAK() antlr.TerminalNode
	Simple_stmt() ISimple_stmtContext
	Compound_stmt() ICompound_stmtContext

	// IsSingle_inputContext differentiates from other interfaces.
	IsSingle_inputContext()
}

type Single_inputContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySingle_inputContext() *Single_inputContext {
	var p = new(Single_inputContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PythonParserRULE_single_input
	return p
}

func InitEmptySingle_inputContext(p *Single_inputContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PythonParserRULE_single_input
}

func (*Single_inputContext) IsSingle_inputContext() {}

func NewSingle_inputContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Single_inputContext {
	var p = new(Single_inputContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PythonParserRULE_single_input

	return p
}

func (s *Single_inputContext) GetParser() antlr.Parser { return s.parser }

func (s *Single_inputContext) LINE_BREAK() antlr.TerminalNode {
	return s.GetToken(PythonParserLINE_BREAK, 0)
}

func (s *Single_inputContext) Simple_stmt() ISimple_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISimple_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISimple_stmtContext)
}

func (s *Single_inputContext) Compound_stmt() ICompound_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICompound_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICompound_stmtContext)
}

func (s *Single_inputContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Single_inputContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Single_inputContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PythonParserVisitor:
		return t.VisitSingle_input(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PythonParser) Single_input() (localctx ISingle_inputContext) {
	this := p
	_ = this
